# cad-hub

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: cd-production.yml  ci.yml
.windsurf/workflows/: deploy.md
apps/areas/: apps.py  urls.py  views.py
apps/areas/services/: __init__.py
apps/avb/: admin.py  apps.py  models.py  models_tender.py  urls.py  views.py
apps/avb/services/: __init__.py  avb_service.py  ifc_x83_converter.py
apps/brandschutz/: admin.py  apps.py  models.py  urls.py  views.py
apps/brandschutz/handlers/: __init__.py  brandschutz.py  brandschutz_models.py  brandschutz_report.py  brandschutz_symbols.py
apps/brandschutz/services/: __init__.py
apps/core/: admin.py  apps.py  healthz.py  managers.py  middleware.py  models.py
apps/core/handlers/: base.py
apps/core/services/: llm_client.py
apps/dxf/: apps.py  urls.py  views.py
apps/dxf/handlers/: __init__.py  pdf_abstandsflaechen.py  pdf_lageplan.py  pdf_vision.py
apps/dxf/services/: __init__.py  cad_loader.py  nl2dxf.py
apps/export/: apps.py  urls.py  views.py
apps/ifc/: admin.py  apps.py  models.py  models_components.py  tasks.py  urls.py  views.py  views_analysis.py  views_components.py  views_export.py  views_nl2cad.py
apps/ifc/parser/: models.py  (+2 more)
config/: celery.py  urls.py  views.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
deployment/scripts/: deploy-remote.sh
docker/app/: Dockerfile  entrypoint.sh
templates/: base.html  landing.html  login.html
(+69 files in other folders)
